[MacViews] Fix Incorrect Bubble Window Bounds

When BubbleDialogDelegateView::SizeToContents() is called,
it doesn't take into account that the bounds from
GetBubbleBounds() doesn't include the NSWindow's style.
This causes the SizeToContents() to potentially set the
bubble window's bounds to an incorrect value.

Bug: 839709
Change-Id: I6e27ff4f30673b5f7c26b68459be1e1cdac51587
Reviewed-on: https://chromium-review.googlesource.com/1069541
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561575}