ui/views/bubble/bubble_dialog_delegate.cc
@@ -28,6 +28,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/base/win/shell.h"
 #endif
 
+#if defined(OS_MACOSX)
+#include "ui/views/widget/widget_utils_mac.h"
+#endif
+
 namespace views {
 
 namespace {
@@ -347,7 +351,16 @@ void BubbleDialogDelegateView::SetAnchorRect(const gfx::Rect& rect) {
 }
 
 void BubbleDialogDelegateView::SizeToContents() {
-  GetWidget()->SetBounds(GetBubbleBounds());
+  gfx::Rect bubble_bounds = GetBubbleBounds();
+#if defined(OS_MACOSX)
+  // GetBubbleBounds() doesn't take the Mac NativeWindow's style mask into
+  // account, so we need to adjust the size.
+  gfx::Size actual_size =
+      GetWindowSizeForClientSize(GetWidget(), bubble_bounds.size());
+  bubble_bounds.set_size(actual_size);
+#endif
+
+  GetWidget()->SetBounds(bubble_bounds);
 }
 
 BubbleFrameView* BubbleDialogDelegateView::GetBubbleFrameView() const {
