ui/views/widget/widget_utils_mac.mm
@@ -1,0 +1,18 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2018 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#include "ui/views/widget/widget_utils_mac.h"
+
+#import "ui/views/cocoa/bridged_native_widget.h"
+
+namespace views {
+
+gfx::Size GetWindowSizeForClientSize(Widget* widget, const gfx::Size& size) {
+  DCHECK(widget);
+  return BridgedNativeWidget::GetWindowSizeForClientSize(
+      widget->GetNativeWindow(), size);
+}
+
+}  // namespace views
